# aoc2019

./: Cargo.toml  day22.py  day25stuff.txt  good-day-22.py  hoohaw.py
day22_special_python/: day22.py  good-day-22.py
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.math  day22.py  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day5_part1.rs  day5_part2.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  output_for_day_19
