[package]
name = "aoc2019"
version = "0.1.0"
authors = ["smt"]
edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
defaultmap = "*"
gen-iter = {git = "https://github.com/sumeet/gen-iter", branch = "master"}
itertools = "*"
colored = "*"
num-rational = "*"
float-cmp = "*"
num = "*"
rayon = "*"
rand = "*"
chashmap = "*"
crossbeam = "*"
pathfinding = "*"
modinverse = "*"
lazy_static = "*"